<resources>

    <string name="app_name">EChnix</string>
    <string name="title_initial_screen">EChnix</string>
    <string name="title_menu">Event List</string>
    <string name="title_mockit">Mock IT</string>
    <string name="popup_exit">Exit</string>
    <string name="title_about">About</string>
    <string name="title_exam">Exam</string>
    <string name="title_ftv">Mr and Ms EChnix</string>
    <string name="title_kbh">Koun Banega Hazarpati</string>
    <string name="title_loot">Loot</string>
    <string name="title_mc">Master Chef</string>
    <string name="title_research">Research</string>
    <string name="title_zno">0\'s and 1\'s</string>
    <string name="name">Name:</string>
    <string name="number">Phone Number:</string>
    <string name="semester">Semester:</string>
    <string name="branch">Branch:</string>
    <string name="reg">Register</string>
    <string name="coll">College:</string>

</resources>