<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TabHost
        android:id="@+id/tabhostMc"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/mcTab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/mc" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mcTab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/events_background"
                    android:weightSum="100" >

                    <ScrollView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="30" >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name"
                                android:textStyle="bold" />
                            <EditText
                                android:id="@+id/mcName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/number"
                                android:textStyle="bold" />
                            <EditText
                                android:id="@+id/mcNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPhonetic|phone"
                                android:maxLength="10" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/semester"
                                android:textStyle="bold" />
                            <EditText
                                android:id="@+id/mcSemester"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="12345678"
                                android:inputType="textPhonetic|phone"
                                android:maxLength="1" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/branch"
                                android:textStyle="bold" />
                            <EditText
                                android:id="@+id/mcBranch"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/coll"
                                android:textStyle="bold" />
                            <EditText
                                android:id="@+id/mcColl"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </ScrollView>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="70"
                            android:orientation="vertical" >
                        <ImageButton
                            android:id="@+id/mcReg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/reg"
                            android:src="@drawable/register" />
                    </LinearLayout>                    
                    </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>